Bug 312629 - After gwenview starts, the keyboard focus should by default be in the recent folders, but not in the top tabbar of "Recent Folders" and "Recent URLs".
Summary: After gwenview starts, the keyboard focus should by default be in the recent ...
Status: RESOLVED FIXED
Alias: None
Product: gwenview
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.10.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Gwenview Bugs
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2013-01-04 19:26 UTC by Jekyll Wu
Modified: 2013-01-14 18:00 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jekyll Wu 2013-01-04 19:26:26 UTC
I prefer keyboards over mouse whenever possible. And here is one thing that is annoying when using gwenview with keyboard only. 

When I start gwenview, there are some recent folders listed and that is fine. But when I want to use arrow keys to navigate and enter into some folder, I find I just can't do it. It turns out that the top tabbar containing "Recent Folders" and "Recent URLS" is having the keyboard focus, so pressing up/down arrow does make any change and pressing left/right arrows just switch between those two tabs. 

The workaround is pressing "Tab" once to move the keyboard focus to those recent folders, then I can use arrow keys as expected. But that is just unnatural and extra work, which I often just forget.

So please, when gwenview start :

  * make the area containing those recent folders have keyboard focus by default
  * automatically select and highlight the first item in those recent folders.


Reproducible: Always
Comment 1 Benni Hill 2013-01-05 23:43:05 UTC
https://git.reviewboard.kde.org/r/108218/
Comment 2 Benni Hill 2013-01-14 18:00:02 UTC
Git commit 256418c7371f09c0e49acf2b8c91cfa47bb9617a by Benjamin Löwe.
Committed on 06/01/2013 at 00:39.
Pushed by bennihill into branch 'master'.

Fix bug 312629 - After gwenview starts, the keyboard focus
should by default be in the recent folders, but not in the top
tabbar of "Recent Folders" and "Recent URLs".
REVIEW: 108218
FIXED-IN: 4.11.0

M  +6    -0    app/startmainpage.cpp

http://commits.kde.org/gwenview/256418c7371f09c0e49acf2b8c91cfa47bb9617a