Fix bug 312629 - After gwenview starts, the keyboard focus should by default be in the recent folders, but not in the top tabbar of "Recent Folders" and "Recent URLs".

BUG: 312629
REVIEW: 108218
FIXED-IN: 4.11.0